<resources>
    <string name="app_name">Booking</string>
    <string name="get_started">Get Started</string>
    <string name="plan_your_holidays_easy">Plan your holidays easy</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="log_in">Log in</string>
    <string name="todo">todo</string>
    <string name="find_your">Find your</string>
    <string name="next_destination">Next Destination</string>
    <string name="search">Search</string>
    <string name="check_in">Check in</string>
    <string name="search_destinations">Search Destinations</string>
    <string name="top_places">Top Hotels</string>
    <string name="check_out">Check out</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_here">Log in here</string>
    <string name="welcome">Welcome</string>
    <string name="last_name_reservation">Last name</string>
    <string name="first_name_reservation">First name</string>
    <string name="your_email">Your email</string>
    <string name="your_recent_bookings">Your recent bookings</string>
    <string name="plan_your_next_trip">Plan your next trip</string>
    <string name="price">"Price : "</string>
    <string name="count">"Count : "</string>
    <string name="reviews">reviews</string>
    <string name="_4_5">4.5</string>
    <string name="textview">Ovde stoji ime hotela</string>
    <string name="price_for_display">$112</string>
    <string name="hotel_name_reservation">Ovde stoji ime hotela</string>
    <string name="total_price">"Total price : "</string>
    <string name="imagecancel">cancel</string>
</resources>