<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/card_bg">


    <ImageView
        android:id="@+id/imageViewTopHotels"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewArrowButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewArrowButton"
        app:srcCompat="@drawable/recentimage1" />

    <ImageView
        android:id="@+id/imageViewArrowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_icon" />

    <TextView
        android:id="@+id/textViewTopHotelsTitle"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview"
        app:fontFamily="@font/roboto_bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageViewArrowButton"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toEndOf="@+id/imageViewTopHotels"
        app:layout_constraintTop_toTopOf="@+id/imageViewTopHotels" />

    <TextView
        android:id="@+id/textViewTopHotelsPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_for_display"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <RatingBar
        android:id="@+id/ratingBarRating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="0.1"
        app:layout_constraintBottom_toTopOf="@+id/textViewTopHotelsCount"
        app:layout_constraintStart_toEndOf="@+id/imageViewTopHotels"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewRatingFloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_4_5"
        android:textStyle="bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBarRating"
        app:layout_constraintStart_toEndOf="@+id/ratingBarRating" />

    <TextView
        android:id="@+id/textViewTopHotelsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/count"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewTopHotels"
        app:layout_constraintStart_toEndOf="@+id/imageViewTopHotels" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/reviews"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTopHotelsCount"
        app:layout_constraintStart_toEndOf="@+id/textViewTopHotelsCount" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toTopOf="@+id/ratingBarRating"
        app:layout_constraintStart_toStartOf="@+id/textViewTopHotelsTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>